@@ -1,5 +1,9 @@
 This is the CHANGELOG for amavisd-milter.
 
+20081109:
+	Local state directory (/var/amavis) is tunable via configure option
+	--localstatedir=<DIR>
+
 20081108:
 	Added new amavisd-milter option -q which sets milter socket backlog
 	used by listen(2).
@@ -332,4 +336,4 @@ This is the CHANGELOG for amavisd-milter.
 	First public release.  Fully tested on FreeBSD 5.3.
 
 
-$Id: CHANGES,v 1.61 2008/11/08 20:11:36 reho Exp $
+$Id: CHANGES,v 1.62 2008/11/08 20:30:29 reho Exp $
